feat: finalización de lectura RedHat

--- a/T2_SofiaMaldonado.ipynb
+++ b/T2_SofiaMaldonado.ipynb
@@ -49,9 +49,34 @@
     "\n",
     "MLOps se concerna con el proceso de entrenar modelos, y que un modelo pueda ser constantemente re-entrenado con nueva data, monitoreado e implementado con el mejor rendimiento posible.\n",
     "\n",
-    "## Beneficios\n",
+    "# Beneficios\n",
+    "Si un modelo es usado por mucho tiempo sin ser re-entrenado, puede surgir un problema llamado *data drift*, que podría afectar a las operaciones de un negocio. Por ende, es importante que los modelos sean ajustados periódicamente para que mantengan la precisión buscada. Abajo se pueden ver formas en las que MLOps pueden beneficiar a una organización:\n",
     "\n",
-    "Si un modelo es usado por mucho tiempo sin ser re-entrenado, puede surgir un problema llamado *data drift*, que podría afectar a las operaciones de un negocio. "
+    "## Reproducibilidad\n",
+    "Al repertir ciertos experimentos con nuevos datos, se pueden administrar cambios al código y configuraciones de diferentes modelos.\n",
+    "\n",
+    "## CI/CD\n",
+    "Los modelos pueden entrenarse, validarse e implementarse automáticamente\n",
+    "\n",
+    "## Colaboración rápida\n",
+    "MLOps permite mayor colaboración entre miembros de un equipo\n",
+    "\n",
+    "## Ahorro de costes\n",
+    "La automatización permite ahorrar mucho trabajo manual que ocupa mucho tiempo y dinero, y reduce la posibilidad de errores humanos\n",
+    "\n",
+    "## Mejor gobernanza y cumplimiento\n",
+    "En este caso, el cumplimiento de medidas de privacidad con datos sensibles\n",
+    "\n",
+    "# Automatización en MLOps\n",
+    "\n",
+    "MLOps permite la automatización de entrenar modelos de aprendizaje máquina, junto con otros beneficios:\n",
+    "- Mantenimiento predecible\n",
+    "- Detección de fraude\n",
+    "- Implementación de NLP\n",
+    "- Visión computacional\n",
+    "- Detección de anomalías\n",
+    "- Trabajo en el sector salud\n",
+    "- etc"
    ]
   }
  ],
