feat: finalización verdadera RedHat

--- a/T2_SofiaMaldonado.ipynb
+++ b/T2_SofiaMaldonado.ipynb
@@ -68,7 +68,6 @@
     "En este caso, el cumplimiento de medidas de privacidad con datos sensibles\n",
     "\n",
     "# Automatización en MLOps\n",
-    "\n",
     "MLOps permite la automatización de entrenar modelos de aprendizaje máquina, junto con otros beneficios:\n",
     "- Mantenimiento predecible\n",
     "- Detección de fraude\n",
@@ -76,7 +75,10 @@
     "- Visión computacional\n",
     "- Detección de anomalías\n",
     "- Trabajo en el sector salud\n",
-    "- etc"
+    "- etc\n",
+    "\n",
+    "# MLOps vs DevOps\n",
+    "DevOps busca automatizar procesos de rutina y los ambientes virtuales y físicos para el desarrollo de software. MLOps es más experimental y se enfoca principalmente en *data pipelines*. "
    ]
   }
  ],
