feat: worked on EDA 2

--- a/TC1_SofiaMaldonado.ipynb
+++ b/TC1_SofiaMaldonado.ipynb
@@ -23,7 +23,31 @@
     "\n",
     "</style>\n",
     "\n",
+    "<h1 id='title'>Actividad de Clase 1</h1> <style>\n",
+    "#title {\n",
+    "    text-align: center;\n",
+    "    font-family: Helvetica, Sans-serif;\n",
+    "}\n",
+    "#assign_name {\n",
+    "    text-align: center;\n",
+    "    font-size: 30px;\n",
+    "    font-weight: 200\n",
+    "}\n",
+    "#info {\n",
+    "    text-aling: left;\n",
+    "    font-size: 20px;\n",
+    "    font-weight: 200\n",
+    "}\n",
+    "\n",
+    "</style>\n",
+    "\n",
     "<h1 id='title'>Actividad de Clase 1</h1> \n",
+    "<p id='assign_name'>MovieLens</p>\n",
+    "<p id='info'>Por Sofía Maldonado García</p>\n",
+    "<p id='info'>Curso: Proyecto de Ciencia de Datos</p>\n",
+    "<p id='info'>Profesor: Cristian Zapata</p>\n",
+    "\n",
+    "***\n",
     "<p id='assign_name'>MovieLens</p>\n",
     "<p id='info'>Por Sofía Maldonado García</p>\n",
     "<p id='info'>Curso: Proyecto de Ciencia de Datos</p>\n",
